refactor: replace Set.of with LinkedHashSet for function words and add chart icon mapping